force-app/main/default/objects/PreReservation__c/PreReservation__c.object-meta.xml
<CustomObject>
    <label>PreReservation</label>
    <nameField>
        <label>PreReservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PreReservation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>