force-app/main/default/objects/PreReservation__c/fields/ChekinDate__c.field-meta.xml
<CustomField>
    <fullName>ChekinDate__c</fullName>
    <label>ChekinDate</label>
    <type>Date</type>
</CustomField>