force-app/main/default/objects/PreReservation__c/fields/ChekoutDate__c.field-meta.xml
<CustomField>
    <fullName>ChekoutDate__c</fullName>
    <label>ChekoutDate</label>
    <type>Date</type>
</CustomField>