force-app/main/default/objects/PreReservation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>