force-app/main/default/objects/PreReservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>PreReservation</relationshipLabel>
    <relationshipName>PreReservation</relationshipName>
    <type>Lookup</type>
</CustomField>